# GAM

./: .gitignore  FineAnalysis.py  GAM.py  GAM_spec.py  GeneCount.py  LICENSE  LMM.py  LMMcount.py  MERSA_spec.py  README.md  SNP_converter_amino.py  SNP_converter_style.py  SNPcount.py  dropfix.ipynb  gam_ml.ipynb  gene_count.py  lmm_count.py  pyproject.toml  run_gam.py  run_lmm.py  snpCountM.py  snp_count.py
Data/: DST_SAMPLES.csv  ENA_drug.csv  GAM_all.csv  GAM_train.csv  LMM_Mersa_snps.csv  MERSA_correct_gene.csv  MERSA_correct_snps.csv  RSdata13.csv  SNP_correct.csv  WHO21_all_I.csv  WHO23_all_I.csv  Y9_train.csv  Y_test.csv  bugs.csv  input_max.csv  valYs.csv  val_X.csv
LMM/: 1579_lmm_0.csv  1579_lmm_1.csv  1579_lmm_2.csv  1579_lmm_3.csv  1579_lmm_4.csv  1579_lmm_5.csv  1579_lmm_6.csv  1579_lmm_7.csv  1579_lmm_8.csv  1579_lmm_9.csv  179_lmm_0.csv  179_lmm_1.csv  179_lmm_2.csv  179_lmm_3.csv  179_lmm_4.csv  179_lmm_5.csv  179_lmm_6.csv  179_lmm_7.csv  179_lmm_8.csv  179_lmm_9.csv  2279_lmm_0.csv  2279_lmm_1.csv  2279_lmm_2.csv  2279_lmm_3.csv  2279_lmm_4.csv  2279_lmm_5.csv  2279_lmm_6.csv  2279_lmm_7.csv  2279_lmm_8.csv  2279_lmm_9.csv  2979_lmm_0.csv  2979_lmm_1.csv  2979_lmm_2.csv  2979_lmm_3.csv  2979_lmm_4.csv  2979_lmm_5.csv  2979_lmm_6.csv  2979_lmm_7.csv  2979_lmm_8.csv  2979_lmm_9.csv  (+50 more)
Reg/: AMIKACIN.csv  ETHAMBUTOL.csv  ETHIONAMIDE.csv  ISONIAZID.csv  KANAMYCIN.csv  LEVOFLOXACIN.csv  MOXIFLOXACIN.csv  RIFABUTIN.csv  RIFAMPICIN.csv
tests/: test_config_parsing.py  test_group_association.py  test_group_association_schema.py  test_lmm_summary.py  (+1 more)
(+35 files in other folders)
